--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "backbone": "~1.1.2",
+    "jquery": "~2.1.3"
   }
 }
